Fixed minor alignment issue

--- a/res/css/_content.sass
+++ b/res/css/_content.sass
@@ -225,6 +225,9 @@
           background: #fff
           position: relative
 
+          @media(max-width: 800px)
+            line-height: 1rem
+
           > .more
             height: 56px
             width: 56px
